fixing junit tests